--- a/.github/workflows/deploy_to_pypi.yml
+++ b/.github/workflows/deploy_to_pypi.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'  # Replace '3.8' with the Python version you are using
+        python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -21,9 +21,10 @@ jobs:
         pip install setuptools wheel twine
     - name: Run tests
       run: |
-        # Add commands to run your tests, for example:
-        # pytest
-        # or for Django project:
+        python -m venv venv
+        source venv/bin/activate
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
         python manage.py test
     - name: Publish to PyPI
       if: github.event_name == 'push' && github.ref == 'refs/heads/main' && success()
