--- a/.github/workflows/deploy_to_pypi.yml
+++ b/.github/workflows/deploy_to_pypi.yml
@@ -14,17 +14,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.11'
-    - name: Install dependencies
+    - name: Create and activate virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
+    - name: Install dependencies
+      run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install setuptools wheel twine
     - name: Run tests
       run: |
-        python -m venv venv
-        source venv/bin/activate
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
         python manage.py test
     - name: Publish to PyPI
       if: github.event_name == 'push' && github.ref == 'refs/heads/main' && success()
