--- a/.github/workflows/deploy_to_pypi.yml
+++ b/.github/workflows/deploy_to_pypi.yml
@@ -14,24 +14,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.11'
-    - name: Create and activate virtual environment
-      run: |
-        python -m venv venv
-        source venv/bin/activate
     - name: Upgrade pip
-      run: |
-        python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
     - name: Install dependencies
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install setuptools wheel twine
     - name: Run tests
-      run: |
-        python manage.py test
+      run: python manage.py test
+    - name: Build package
+      run: python setup.py sdist bdist_wheel
     - name: Publish to PyPI
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main' && success()
+      if: success()
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: ${{ secrets.PYPI_USERNAME }}
-        password: ${{ secrets.PYPI_PASSWORD }}
-# You must configure PYPI_USERNAME and PYPI_PASSWORD in the secrets settings of your repository.
+          password: ${{ secrets.PYPI_PASSWORD }}
